Cleaned Excel data for micro trends in the construction industry. Specifically, the data provides insight into what materials have been trending for the facade of homes across the US. This is an 'extra' dataset that is not part of the general project. This is solely for the purpose of possible future additions to my research. In the future, I will try to research micro-trends in the industry to advise investors on possible shifts in the industry.

--- a/Real_Estate_Project_Python.ipynb
+++ b/Real_Estate_Project_Python.ipynb
@@ -92,8 +92,32 @@
     "File 5 --> 'construction_status_2021.csv' --> Construction status in the usa and regions in 2021. The status categories \n",
     "are [started, completed, under construction]. \n",
     "\n",
+    "'''\n",
     "\n",
-    "'''"
+    "\n",
+    "\n",
+    "#File 1\n",
+    "auth_not_started = pd.read_csv('auth_not_started.csv',index_col=0)\n",
+    "\n",
+    "#File 2\n",
+    "new_price_by_region = pd.read_csv('new_price_by_region', index_col=0)\n",
+    "\n",
+    "#File 3\n",
+    "sold_finance_type =  pd.read_csv('sold_finance_type.csv', index_col=0)\n",
+    "\n",
+    "#File 4\n",
+    "\n",
+    "by_sales_price_USA = pd.read_csv('houses_sold_by_sales_price_USA.csv', index_col = 0)\n",
+    "\n",
+    "#File 5\n",
+    "status_2021 = pd.read_csv('construction_status_2021.csv', index_col = 0)\n",
+    "\n",
+    "status_2021\n",
+    "\n",
+    "#File 6 (For the future, I will explore micro trends in the construction industry to extrapolate strategies for \n",
+    "#investors)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -745,27 +769,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "#File 1\n",
-    "auth_not_started = pd.read_csv('auth_not_started.csv',index_col=0)\n",
-    "\n",
-    "#File 2\n",
-    "new_price_by_region = pd.read_csv('new_price_by_region', index_col=0)\n",
-    "\n",
-    "#File 3\n",
-    "sold_finance_type =  pd.read_csv('sold_finance_type.csv', index_col=0)\n",
-    "\n",
-    "#File 4\n",
-    "\n",
-    "by_sales_price_USA = pd.read_csv('houses_sold_by_sales_price_USA.csv', index_col = 0)\n",
-    "\n",
-    "#File 5\n",
-    "status_2021 = pd.read_csv('construction_status_2021.csv', index_col = 0)\n",
-    "\n",
-    "status_2021\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
