--- a/data_preparation_1.ipynb
+++ b/data_preparation_1.ipynb
@@ -2,35 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e70e63ba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "        <script type=\"text/javascript\">\n",
-       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
-       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
-       "        if (typeof require !== 'undefined') {\n",
-       "        require.undef(\"plotly\");\n",
-       "        requirejs.config({\n",
-       "            paths: {\n",
-       "                'plotly': ['https://cdn.plot.ly/plotly-2.8.3.min']\n",
-       "            }\n",
-       "        });\n",
-       "        require(['plotly'], function(Plotly) {\n",
-       "            window._Plotly = Plotly;\n",
-       "        });\n",
-       "        }\n",
-       "        </script>\n",
-       "        "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n"
@@ -2519,7 +2494,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "627b5884",
+   "id": "a52b516b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2534,7 +2509,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "82239e75",
+   "id": "7b7ed3b1",
    "metadata": {},
    "outputs": [
     {
@@ -3140,7 +3115,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "75ad66e6",
+   "id": "a7e9c564",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3152,7 +3127,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "175e7b2d",
+   "id": "18a57c9d",
    "metadata": {},
    "outputs": [
     {
@@ -3171,7 +3146,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "bfbbc4b5",
+   "id": "270e0ba6",
    "metadata": {},
    "outputs": [
     {
@@ -3802,7 +3777,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "cca783f0",
+   "id": "f0218f03",
    "metadata": {},
    "outputs": [
     {
@@ -4855,7 +4830,7 @@
   {
    "cell_type": "code",
    "execution_count": 260,
-   "id": "f3763ac1",
+   "id": "7107c32a",
    "metadata": {},
    "outputs": [
     {
@@ -5578,26 +5553,198 @@
     "# construction_status_2021\n",
     "for i in construction_status_2021.columns[1:5]:\n",
     "    construction_status_2021[i + ' Rate of Change'] = construction_status_2021[[i]].pct_change()\n",
-    "construction_status_2021\n"
+    "\n",
+    "#construction_status_2021.to_csv('construction_status_2021.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
-   "id": "465fe2c7",
+   "execution_count": 20,
+   "id": "37a8a3d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Period</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Brick</th>\n",
+       "      <th>Wood</th>\n",
+       "      <th>Stucco</th>\n",
+       "      <th>Vinyl Sliding</th>\n",
+       "      <th>Fiber Cement</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>138</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>71</td>\n",
+       "      <td>6</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>147</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>81</td>\n",
+       "      <td>5</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>164</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "      <td>85</td>\n",
+       "      <td>6</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>180</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>99</td>\n",
+       "      <td>6</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>214</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>115</td>\n",
+       "      <td>8</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>221</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>118</td>\n",
+       "      <td>8</td>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>223</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>117</td>\n",
+       "      <td>9</td>\n",
+       "      <td>83</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Period  Total  Brick  Wood  Stucco  Vinyl Sliding  Fiber Cement\n",
+       "0    2014    138      1    10      71              6            48\n",
+       "1    2015    147      1     9      81              5            49\n",
+       "2    2016    164      2     8      85              6            60\n",
+       "3    2017    180      2     9      99              6            63\n",
+       "4    2018    214      2    12     115              8            75\n",
+       "5    2019    221      2    10     118              8            81\n",
+       "6    2020    223      2    10     117              9            83"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "construction_status_2021.to_csv('construction_status_2021.csv')\n",
+    "exterior_type = pd.read_excel(\"exterior_type_completed.xls\",sheet_name=\"SFTotalExWallMat\",header=None, \n",
+    "                                                                 skiprows=49, nrows= 7, \n",
+    "                                                                  index_col = None, usecols=\"A:G\", names =[ 'Period','Total',\n",
+    "                                                                                                               'Brick',\n",
+    "                                                                                                               'Wood',\n",
+    "                                                                                                               'Stucco',\n",
+    "                                                                                                               'Vinyl Sliding',\n",
+    "                                                                                                               'Fiber Cement'])\n",
     "\n",
-    "    \n",
-    "    "
+    "Northeast = pd.read_excel(\"exterior_type_completed.xls\",sheet_name=\"SFTotalExWallMat\",header=None, \n",
+    "                                                                 skiprows=101, nrows= 7, \n",
+    "                                                                  index_col = None, usecols=\"A:G\", names =[ 'Period','Total',\n",
+    "                                                                                                               'Brick',\n",
+    "                                                                                                               'Wood',\n",
+    "                                                                                                               'Stucco',\n",
+    "                                                                                                               'Vinyl Sliding',\n",
+    "                                                                                                              'Fiber Cement'])\n",
+    "\n",
+    "\n",
+    "Midwest = pd.read_excel(\"exterior_type_completed.xls\",sheet_name=\"SFTotalExWallMat\",header=None, \n",
+    "                                                                 skiprows=153, nrows= 7, \n",
+    "                                                                  index_col = None, usecols=\"A:G\", names =[ 'Period','Total',\n",
+    "                                                                                                               'Brick',\n",
+    "                                                                                                               'Wood',\n",
+    "                                                                                                               'Stucco',\n",
+    "                                                                                                               'Vinyl Sliding',\n",
+    "                                                                                                              'Fiber Cement'])\n",
+    "\n",
+    "South = pd.read_excel(\"exterior_type_completed.xls\",sheet_name=\"SFTotalExWallMat\",header=None, \n",
+    "                                                                 skiprows=205, nrows= 7, \n",
+    "                                                                  index_col = None, usecols=\"A:G\", names =[ 'Period','Total',\n",
+    "                                                                                                               'Brick',\n",
+    "                                                                                                               'Wood',\n",
+    "                                                                                                               'Stucco',\n",
+    "                                                                                                               'Vinyl Sliding',\n",
+    "                                                                                                       'Fiber Cement'])\n",
+    "West = pd.read_excel(\"exterior_type_completed.xls\",sheet_name=\"SFTotalExWallMat\",header=None, \n",
+    "                                                                 skiprows=257, nrows= 7, \n",
+    "                                                                  index_col = None, usecols=\"A:G\", names =[ 'Period','Total',\n",
+    "                                                                                                               'Brick',\n",
+    "                                                                                                               'Wood',\n",
+    "                                                                                                               'Stucco',\n",
+    "                                                                                                               'Vinyl Sliding',\n",
+    "                                                                                                       'Fiber Cement'])\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f53b16b",
+   "id": "e898a356",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06e276e7",
    "metadata": {},
    "outputs": [],
    "source": []
